add get all folders method
